k8s/1-testkubernetes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testkubernetes
  namespace: production
  labels:
    app: testkubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testkubernetes
  template:
    metadata:
      labels:
        app: testkubernetes
    spec:
      containers:
      - name: testkubernetes
        image: 913508394982.dkr.ecr.ap-south-1.amazonaws.com/testkubernets:v1.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests: {}
---
apiVersion: v1
kind: Service
metadata:
  name: testkubernetes
  namespace: production
  labels:
    run: testkubernetes
spec:
  selector:
    app: testkubernetes
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
