k8s/4-https-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-testkubernetes
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: http-testkubernetes
spec:
  tls:
  - hosts:
    - app1.5by1.com
    - app2.5by1.com
    secretName: tls-secret
  rules:
  - host: app1.5by1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testkubernetes
          servicePort: 8080
  - host: app2.5by1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testkubernetes
          servicePort: 8080
